add bower support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transliteration",
   "version": "0.0.6",
-  "description": "Transliteration module for node.js. Transliterate unicode characters into latin ones. Supports all common unicode characters including CJK.",
+  "description": "Transliteration module for node.js. Transliterate unicode characters into latin characters. Supports all common unicode characters including CJK.",
   "main": "lib/transliteration.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
