--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transliteration",
-  "version": "0.1.0",
-  "description": "Transliteration module for node.js. Transliterate unicode characters into latin characters. Supports all common unicode characters including CJK.",
+  "version": "0.1.1",
+  "description": "Transliteration module for node.js. Transliterates special unicode characters into corresponding ascii code so it can be safely used as URL slag or filename",
   "main": "lib/transliteration.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
