--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "transliteration",
-  "version": "1.0.1",
+  "version": "1.0.0-beta1",
   "homepage": "https://github.com/andyhu/node-transliteration",
   "authors": [
     "Andy Hu"
