--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,15 @@
 {
   "extends": "airbnb-base",
+  "env": {
+    "node": true,
+    "mocha": true
+  },
   "rules": {
     "func-names": 0,
     "global-require": 0,
     "no-param-reassign": 0,
+    "no-restricted-syntax": [0, "ForInStatement"],
+    "guard-for-in": 0,
     "max-len": [1, 120]
   }
 }
