--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "transliteration",
   "version": "1.0.0",
-  "description": "Transliterate unicode special characters into corresponding pure ascii so it can be safely used as URL slug or as file name etc.",
+  "description": "Unicode to ACSII transliteration module. ",
   "main": "build/node/index.js",
   "scripts": {
-    "lint": "eslint lib/*.js test/*.js gulpfile.js",
+    "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
     "test": "mocha --compilers js:babel-core/register -R spec",
     "prebuild": "npm run test",
     "build": "gulp",
     "coverage": "nyc npm test",
-    "postcoverage": "rm -rf .nyc_output",
+    "postcoverage": "rimraf .nyc_output",
     "coveralls": "nyc npm test && nyc report -r=text-lcov | coveralls",
-    "postcoveralls": "rm -rf .nyc_output"
+    "postcoveralls": "rimraf .nyc_output"
   },
-  "bin": {},
+  "bin": {
+    "transliterate": "bin/js/transliterate.js",
+    "slugify": "bin/js/slugify.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/andyhu/node-transliteration.git"
@@ -36,14 +39,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "chai": "^3.5.0",
-    "commander": "^2.9.0",
     "coveralls": "^2.11.9",
-    "del": "^2.2.0",
     "eslint": "^2.10.2",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.0",
@@ -53,10 +53,14 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "karma-sauce-launcher": "^1.0.0",
     "mocha": "~2.4.5",
     "nyc": "^6.4.3",
+    "rewired": "^1.0.7",
+    "rimraf": "^2.5.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^4.7.1"
   },
   "dependencies": {}
 }
