--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,10 @@
   "authors": [
     "Andy Hu"
   ],
-  "description": "Transliterate unicode special characters into corresponding pure ascii so it can be safely used as URL slug or as file name etc.",
-  "main": ["build/browser/transliteration.min.js"],
+  "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
+  "main": [
+    "build/browser/transliteration.min.js"
+  ],
   "keywords": [
     "transliterate",
     "transliteration",
