--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transliteration",
-  "version": "1.0.1",
-  "description": "Unicode to ACSII transliteration module. ",
+  "version": "1.0.2",
+  "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
   "main": "build/node/index.js",
   "scripts": {
     "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
@@ -53,7 +53,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "karma-sauce-launcher": "^1.0.0",
     "mocha": "~2.4.5",
     "nyc": "^6.4.3",
     "rewired": "^1.0.7",
