--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
-    "test": "mocha --compilers js:babel-core/register -R spec",
+    "test": "tape -r babel-core/register test/**/*.test.js | faucet",
     "prebuild": "npm run test",
     "build": "gulp",
     "coverage": "nyc npm test",
@@ -42,20 +42,20 @@
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.0",
+    "faucet": "0.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "mocha": "~2.4.5",
     "nyc": "^6.4.3",
     "rimraf": "^2.5.2",
+    "tape": "^4.5.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
