--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transliteration",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
   "main": "build/node/index.js",
   "scripts": {
@@ -39,13 +39,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-import": "^1.8.1",
     "faucet": "0.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -53,7 +54,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "nyc": "^6.4.3",
+    "nyc": "^6.4.4",
     "rimraf": "^2.5.2",
     "tape": "^4.5.1",
     "vinyl-buffer": "^1.0.0",
