--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["es2015"],
-  "plugins": ["add-module-exports"]
+  "presets": [
+    "es2015-loose"
+  ],
+  "plugins": [
+    "add-module-exports"
+  ]
 }
