--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
-    "test": "tape -r babel-core/register test/**/*.test.js | faucet",
+    "test": "npm run test:node && npm run test:browser",
+    "test:node": "tape -r babel-core/register test/node/*.js | tap-spec",
+    "test:browser": "zuul --no-coverage -- test/browser/*.js",
     "prebuild": "npm run test",
     "build": "gulp",
     "coverage": "nyc npm test",
@@ -38,27 +40,30 @@
     "url": "https://github.com/andyhu/node-transliteration/issues"
   },
   "devDependencies": {
-    "babel-core": "^6.9.0",
+    "babel-core": "^6.9.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "coveralls": "^2.11.9",
-    "eslint": "^2.10.2",
+    "es5-shim": "^4.5.8",
+    "eslint": "^2.11.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.1",
-    "faucet": "0.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-es3ify": "0.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "nyc": "^6.4.4",
     "rimraf": "^2.5.2",
+    "tap-spec": "^4.1.1",
     "tape": "^4.5.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "zuul": "^3.10.1"
   },
   "dependencies": {
     "yargs": "^4.7.1"
