--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   ],
   "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
   "main": [
+    "build/browser/transliteration.js",
     "build/browser/transliteration.min.js"
   ],
   "keywords": [
@@ -23,7 +24,9 @@
   "ignore": [
     ".*",
     "lib",
+    "data",
     "build/node",
+    "build/bin",
     "package.json",
     "test",
     "gulpfile.babel.js"
