--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
-    "test": "npm run test:node",
+    "test": "npm run test:node && npm run test:browser",
     "test:node": "tape -r babel-core/register test/node/*.js | tap-spec",
     "test:browser": "zuul --no-coverage -- test/browser/*.js",
     "prebuild": "npm run test",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
