--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
-    "test": "npm run test:node && npm run test:browser",
+    "test": "npm run test:node",
     "test:node": "tape -r babel-core/register test/node/*.js | tap-spec",
     "test:browser": "zuul --no-coverage -- test/browser/*.js",
     "prebuild": "npm run test",
