update zuul username and key

--- a/.zuul.yml
+++ b/.zuul.yml
@@ -20,3 +20,5 @@ browserify:
   - transform: babelify
 scripts:
   - "build/browser/transliteration.min.js"
+username: node-transliteration
+key: 45c0ecd6-f97f-480f-a050-1f35e24e732b
