--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "transliteration",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
-  "main": "build/node/index.js",
+  "main": "lib/node/index.js",
   "scripts": {
-    "lint": "eslint lib/**/*.js test/**/*.js gulpfile.babel.js",
+    "lint": "eslint src/**/*.js test/**/*.js gulpfile.babel.js",
     "pretest": "npm run lint",
     "test": "npm run test:node",
     "test:node": "tape -r babel-core/register test/node/*.js | tap-spec",
@@ -15,11 +15,12 @@
     "coverage": "nyc npm test",
     "postcoverage": "rimraf .nyc_output",
     "coveralls": "nyc npm test && nyc report -r=text-lcov | coveralls",
-    "postcoveralls": "rimraf .nyc_output"
+    "postcoveralls": "rimraf .nyc_output",
+    "prepublish": "npm run build"
   },
   "bin": {
-    "transliterate": "build/bin/transliterate",
-    "slugify": "build/bin/slugify"
+    "transliterate": "lib/bin/transliterate",
+    "slugify": "lib/bin/slugify"
   },
   "repository": {
     "type": "git",
@@ -41,33 +42,33 @@
     "url": "https://github.com/andyhu/node-transliteration/issues"
   },
   "devDependencies": {
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.10.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "coveralls": "^2.11.9",
-    "es5-shim": "^4.5.8",
-    "eslint": "^2.11.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.1",
+    "coveralls": "^2.11.11",
+    "es5-shim": "^4.5.9",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb-base": "^4.0.0",
+    "eslint-plugin-import": "^1.10.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-es3ify": "0.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
-    "nyc": "^6.4.4",
-    "rimraf": "^2.5.2",
+    "nyc": "^7.0.0",
+    "rimraf": "^2.5.3",
     "tap-spec": "^4.1.1",
-    "tape": "^4.5.1",
+    "tape": "^4.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "zuul": "^3.10.1"
   },
   "dependencies": {
-    "yargs": "^4.7.1"
+    "yargs": "^4.8.0"
   }
 }
