--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "import/no-dynamic-require": 0,
     "import/extensions": 0,
     "no-bitwise": 1,
-    "no-plusplus": 0
+    "no-plusplus": 0,
+    "no-useless-escape": 1,
+    "import/no-named-default": 0
   }
 }
