--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-es3ify": "0.0.0",
+    "gulp-es3ify": "^0.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
