--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "babel-core": "^6.21.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-es2015-ie": "^6.6.2",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "coveralls": "^2.11.15",
