reverse back .babelrc and gitignore

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
+  "presets": [
+    "es2015"
+  ],
   "plugins": [
-    "add-module-exports",
-    "transform-es2015-modules-commonjs"
+    "add-module-exports"
   ]
 }
