--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transliteration",
   "version": "1.2.1",
-  "description": "Unicode to ACSII transliteration / slugify module. Works in node.js, web browser and command line.",
+  "description": "Unicode to ACSII yransliteration / slugify module for node.js, browser, Web Worker, ReactNative and CLI.",
   "main": "lib/node/index.js",
   "scripts": {
     "lint": "eslint src/**/*.js test/**/*.js gulpfile.babel.js",
