--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-core": "^6.25.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-ie": "^6.7.0",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
