--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "no-bitwise": 0,
     "no-plusplus": 0,
     "no-useless-escape": 0,
-    "import/no-named-default": 0
+    "import/no-named-default": 0,
+    "object-curly-newline": 0
   }
 }
