--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 workflows:
-  version: 2
+  version: 2.1
   test:
     jobs:
       - node-v10
-      - node-v8
-      - node-v6
+      # - node-v8
+      # - node-v6
       # - browser
 
-version: 2
+version: 2.1
 jobs:
   node-v10: &node-base
     docker:
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install ca-certificates
+          name: Install `ca-certificates`
           command: apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
@@ -23,21 +23,27 @@ jobs:
           name: Install dependencies
           command: npm install
       - run:
-          name: Test
+          name: Test node
           command: npm test
+      - run:
+          name: Test browser
+          command: npm test:browser
+      - run:
+          name: Codecov
+          command: npm run codecov
       - save_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_JOB }}-{{ checksum "package.json" }}
           paths:
             - ./node_modules
 
-  node-v6:
-    <<: *node-base
-    docker:
-      - image: node:8-alpine
-  node-v8:
-    <<: *node-base
-    docker:
-      - image: node:6-alpine
+  # node-v6:
+  #   <<: *node-base
+  #   docker:
+  #     - image: node:8-alpine
+  # node-v8:
+  #   <<: *node-base
+  #   docker:
+  #     - image: node:6-alpine
 
   # browser:
   #   docker:
