--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,6 @@
-workflows:
-  version: 2.0
-  test:
-    jobs:
-      - node-v10
-      - node-v8
-      - node-v6
-
 version: 2.0
 jobs:
-  node-v10: &node-base
+  build:
     docker:
       - image: node:10-alpine
     working_directory: ~/repo
@@ -32,12 +24,3 @@ jobs:
       - run:
           name: Codecov
           command: npm run codecov
-
-  node-v8:
-    <<: *node-base
-    docker:
-      - image: node:8-alpine
-  node-v6:
-    <<: *node-base
-    docker:
-      - image: node:6-alpine
