--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/execa": "^0.9.0",
@@ -68,6 +67,7 @@
     "nyc": "^13.1.0",
     "rimraf": "^2.6.1",
     "rollup": "^1.0.0",
+    "rollup-plugin-babel": "^4.3.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-hashbang": "^1.0.1",
     "rollup-plugin-terser": "^4.0.2",
@@ -75,7 +75,6 @@
     "rollup-plugin-uglify": "^6.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1",
-    "tape-rollup": "^4.6.4",
     "ts-loader": "^5.3.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
