--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,5 @@ jobs:
           name: Build
           command: npm run build
       - run:
-          name: Test and Codecov
-          command: npm run codecov
+          name: Test and Coveralls
+          command: npm run coveralls
