--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "prebuild": "npm run generate:data && rimraf dist",
     "build": "rollup -c rollup.config.js && rimraf .rpt2_cache && tsc",
     "coverage": "nyc npm test",
-    "precodecov": "npm run coverage",
-    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov && rimraf .nyc_output coverage.lcov",
     "coveralls": "nyc npm test && nyc report -r=text-lcov | coveralls",
     "prepublish": "npm run lint && npm test && npm run build"
   },
@@ -63,6 +61,7 @@
     "@types/tape": "^4.2.33",
     "@types/yargs": "^12.0.4",
     "codecov": "^3.1.0",
+    "coveralls": "^3.0.2",
     "execa": "^1.0.0",
     "json5": "^2.1.0",
     "nyc": "^13.1.0",
