--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transliteration",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Unicode to ACSII transliteration / slugify module for node.js, browser, Web Worker, ReactNative and CLI.",
   "main": "dist/node/src/node/index.js",
   "module": "dist/browser/bundle.esm.min.js",
@@ -52,37 +52,36 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@types/execa": "^0.9.0",
     "@types/tape": "^4.2.33",
-    "@types/yargs": "^12.0.4",
-    "codecov": "^3.1.0",
+    "@types/yargs": "^12.0.8",
+    "codecov": "^3.2.0",
     "coveralls": "^3.0.2",
     "execa": "^1.0.0",
     "json5": "^2.1.0",
-    "nyc": "^13.1.0",
-    "rimraf": "^2.6.1",
-    "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.3.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-hashbang": "^2.0.0",
+    "nyc": "^13.2.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^5.0.0-alpha.0",
+    "rollup-plugin-hashbang": "^2.2.2",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.19.0",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.19.2",
+    "rollup-plugin-uglify": "^6.0.2",
     "tap-spec": "^5.0.0",
-    "tape": "^4.9.1",
+    "tape": "^4.10.0",
     "ts-loader": "^5.3.3",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.2.2"
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.3.3"
   },
   "dependencies": {
-    "yargs": "^12.0.1"
+    "yargs": "^13.1.0"
   }
 }
