--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/tape": "^4.2.33",
     "@types/yargs": "^13.0.0",
     "codecov": "^3.5.0",
+    "core-js": "^3.1.4",
     "coveralls": "^3.0.4",
     "execa": "^2.0.1",
     "json5": "^2.1.0",
