Fix issues with core-js and umd build

--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,7 @@
               ]
           },
           "useBuiltIns": "usage",
-          "corejs": "3.1.4",
+          "corejs": 3,
           "debug": false,
           "modules": false
       }]
