--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transliteration",
-  "version": "2.1.8",
+  "version": "2.1.9",
   "description": "Unicode to ACSII transliteration / slugify module for node.js, browser, Web Worker, ReactNative and CLI.",
   "main": "dist/node/src/node/index.js",
   "module": "dist/browser/bundle.esm.min.js",
@@ -52,38 +52,40 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
+    "@babel/core": "7.9.6",
     "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-typescript": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
     "@types/execa": "2.0.0",
-    "@types/tape": "4.2.33",
-    "@types/yargs": "15.0.3",
+    "@types/tape": "4.13.0",
+    "@types/yargs": "15.0.4",
     "codecov": "3.6.5",
-    "core-js": "3.6.4",
-    "coveralls": "3.0.9",
+    "core-js": "3.6.5",
+    "coveralls": "3.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "execa": "4.0.0",
-    "json5": "2.1.1",
-    "nyc": "15.0.0",
-    "rimraf": "3.0.1",
-    "rollup": "1.31.0",
+    "json5": "2.1.3",
+    "nyc": "15.0.1",
+    "prettier": "^2.0.5",
+    "rimraf": "3.0.2",
+    "rollup": "2.7.6",
     "rollup-plugin-babel": "5.0.0-alpha.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-hashbang": "2.2.2",
-    "rollup-plugin-sourcemaps": "0.4.2",
-    "rollup-plugin-terser": "5.1.3",
-    "rollup-plugin-typescript2": "0.25.3",
+    "rollup-plugin-sourcemaps": "0.6.1",
+    "rollup-plugin-terser": "5.3.0",
+    "rollup-plugin-typescript2": "0.27.0",
     "rollup-plugin-uglify": "6.0.4",
     "tap-spec": "5.0.0",
-    "tape": "4.13.0",
-    "ts-loader": "6.2.1",
-    "ts-node": "8.6.2",
-    "tslint": "5.20.1",
+    "tape": "5.0.0",
+    "ts-loader": "7.0.2",
+    "ts-node": "8.9.1",
+    "tslint": "6.1.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.8.2"
+    "typescript": "3.8.3"
   },
   "dependencies": {
-    "yargs": "^15.0.2"
+    "yargs": "^15.3.1"
   }
 }
